--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -6,6 +6,29 @@
   <li>{{address.street}}</li>
 </ul>
 
+<h1>Edit User</h1>
+<form>
+  <div>
+    <label for="name">Name</label>
+    <input type="text" [(ngModel)]="name" name="name">
+  </div>
+
+  <div>
+    <label for="age">Age</label>
+    <input type="number" [(ngModel)]="age" name="age">
+  </div>
+
+  <div>
+    <label for="email">email</label>
+    <input type="text" [(ngModel)]="email" name="email">
+  </div>
+
+  <div>
+    <label for="name">Street</label>
+    <input type="text" [(ngModel)]="address.street" name="street">
+  </div>
+</form>
+
 <button (click)="onClick()">GG</button>
 
 <h1>Hobbies</h1>
